Updating npm runner

--- a/back/package.json
+++ b/back/package.json
@@ -9,8 +9,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "typeorm": "ts-node node_modules/typeorm/cli.js",
-    "migration:run": "npm run typeorm migration:run -d src/config/database.datasource.ts",
-    "migration:revert": "npm run typeorm migration:revert -d src/config/database.datasource.ts",
+    "migration:run": "npm run typeorm migration:run -- -d src/config/database.datasource.ts",
+    "migration:revert": "npm run typeorm migration:revert -- -d src/config/database.datasource.ts",
     "schema:sync": "npm run typeorm schema:sync -- -d src/config/database.datasource.ts",
     "migration:show": "npm run typeorm migration:show -- -d src/config/database.datasource.ts",
     "migration:generate": "npm run typeorm migration:generate ./src/migration -- -d src/config/database.datasource.ts",
